# alphaba

./: .gitignore  INTEGRATED_IMPLEMENTATION_PLAN.md  README.md  README_CLI.md  add_diverse_fonts.py  alphabet_shortlist.txt  code_review.md  code_review_with_suggestions.md  data_sources.md  generate_alphabet.py  generate_extensible.py  llm_report.md  main.py  neural_net_alphabets.md  neural_network_alphabet_generation_plan.md  plan_review.md  pyproject.toml  register_new_fonts.py  review_v2.md  setup_alphabets.py  steps_taken.md  ticket_list.md  train_extensible.py  train_unicode.py
.planning/: about_alphabet_pipline.md  analysis.md  architecture_decisions.md  create_prompt_draft.md  dev_diary.md  integration_prompt.md  phase0_exit_checklist.md  phase1_exit_checklist.md  phase_00_checklist.md  phase_01_checklist.md  phase_01_checlist.txt  phase_02_checklist.md  phase_exit_checklist_template.md  phase_exit_checklist_template.txt  plan_phase1.md  plan_phase2.md  project_assessment.md  strategic_notes.md  thinking.txt  tickets.md
alphabet_data/: alphabet_registry.json  character_mappings.json
notebooks/: 01_explore_omniglot.ipynb  02_train_triplet_network.ipynb  03_visualise_embeddings.ipynb  04_some_eploratory_analysis.ipynb  Untitled.ipynb  Untitled1.ipynb
outputs_diverse/: training_info.json
outputs_extensible/: training_info.json
outputs_unicode/: training_history.json  training_info.json
src/: alphabet_data_loader.py  alphabet_pipeline.py  analysis_tools.py  config.py  data_augmentation.py  data_loader.py  evaluation.py  extensible_alphabet_loader.py  (+10 more)
(+168 files in other folders)
