[project]
name = "alphaba"
version = "0.1.0"
description = "alphabets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "fonttools>=4.60.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pytest>=9.0.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "svgpathtools>=1.7.2",
    "tensorflow>=2.20.0",
]
